<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="Inicio" />
    <item
        android:id="@+id/reservations"
        android:icon="@drawable/ic_parking"
        android:title="Reservas" />
    <item
        android:id="@+id/user"
        android:icon="@drawable/ic_user"
        android:title="Usuario" />
</menu>